build_log_readable.txt
To honour the JVM settings for this build a single-use Daemon process will be forked. For more on this, please refer to https://docs.gradle.org/8.8/userguide/gradle_daemon.html#sec:disabling_the_daemon in the Gradle documentation.
Daemon will be stopped at the end of the build 
> Task :app:checkKotlinGradlePluginConfigurationErrors SKIPPED
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:dataBindingMergeDependencyArtifactsDebug UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:dataBindingGenBaseClassesDebug UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE
> Task :app:kaptGenerateStubsDebugKotlin UP-TO-DATE

> Task :app:kaptDebugKotlin
.\gradlew : X:\KushwahaHardware\app\build\tmp\
kapt3\stubs\debug\error\NonExistentClass.java:
3: error: Dao class must be annotated with 
@Dao
At line:1 char:1
+ .\gradlew compileDebugKotlin --no-daemon > 
build_log.txt 2>&1
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: ( 
   X:\KushwahaHard...tated with @Dao:String)  
   [], RemoteException
    + FullyQualifiedErrorId : NativeCommandEr 
   ror
 
public final class NonExistentClass {
             ^
X:\KushwahaHardware\app\build\tmp\kapt3\stubs\
debug\error\NonExistentClass.java:3: error: 
Dao class must be an abstract class or an 
interface
public final class NonExistentClass {
             ^
X:\KushwahaHardware\app\build\generated\source
\kapt\debug\error\NonExistentClass_Impl.java:1
3: error: cannot inherit from final 
NonExistentClass
public final class NonExistentClass_Impl 
extends NonExistentClass {
                                              
   ^

> Task :app:kaptDebugKotlin FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task 
':app:kaptDebugKotlin'.
> A failure occurred while executing org.jetbr
ains.kotlin.gradle.internal.KaptWithoutKotlinc
Task$KaptExecutionWorkAction

* Try:
> Run with --stacktrace option to get the 
stack trace.
> Run with --info or --debug option to get 
more log output.
> Run with --scan to get full insights.
> Get more help at https://help.gradle.org.

BUILD FAILED in 36s
17 actionable tasks: 1 executed, 16 up-to-date
